fix navbar coloring on narrow displays

--- a/app/assets/stylesheets/pvpleaderboard.css
+++ b/app/assets/stylesheets/pvpleaderboard.css
@@ -89,7 +89,10 @@ a:focus {
   width: auto;
 }
 
-.dropdown-menu {
+.dropdown-menu,
+.dropdown-menu>li>a,
+.navbar-nav .open .dropdown-menu,
+.navbar-default .navbar-nav .open .dropdown-menu>li>a {
 	color: #1A0F08;
 	background-color: #E4A703;
 }
@@ -448,7 +451,8 @@ th.tablesorter-primary,
 
 .dropdown-menu>li>a:focus,
 .dropdown-menu>li>a:hover,
-.dropdown-menu li:hover {
+.dropdown-menu li:hover,
+.navbar-default .navbar-nav .open .dropdown-menu>li>a:hover {
 	background-color: #FBDC86;
 	background: #FBDC86;
 }
@@ -456,7 +460,9 @@ th.tablesorter-primary,
 .navbar-default .navbar-nav>.open>a,
 .dropdown-menu>.active>a,
 .dropdown-menu>.active>a:focus,
-.dropdown-menu>.active>a:hover {
+.navbar-default .navbar-nav .open .dropdown-menu>.active>a,
+.dropdown-menu>.active>a:hover,
+.navbar-default .navbar-nav .open .dropdown-menu>.active>a:hover {
   color: inherit;
   text-decoration: none;
   background-color: #F6E4B3;
